--- a/WebApp/templates/details.html
+++ b/WebApp/templates/details.html
@@ -126,7 +126,7 @@
 
 <p style="font-size: 32px"><b>Personal Info: </b></p>
 {% if age %}
-<p><u> Age: {{num}}</u></p>
+<p><u> Age: {{age}}</u></p>
 {% else %}
 <p><u> Age: N/A</u></p>
 {% endif %}
